--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- TITLE
     ================================================== -->
-    <title>Sarwar - Make it Happen</title>
+    <title>Make it Happen!</title>
 
     <!-- CSS
     ================================================== -->
@@ -22,7 +22,7 @@
     <main class="main">
       <div class="content">
         <p>
-          Hey, thanks for visiting. I'm Sarwar and I'll do some projects (newsletter, blog, notes) here. Hope you will bear with me.
+          Hey, thanks for visiting. I'll do some projects (newsletter, blog, notes) here. Hope you will bear with me.
         </p>
       </div>
       <!--/CONTENT-->
