--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <!-- MAIN
