--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="main">
       <div class="content">
         <p>
-          Hey, thanks for visiting. I'll do some projects (newsletter, blog, notes) here. Hope you will bear with me.
+          Hey, I'm Sarwar and thanks for visiting. I'll do some projects (newsletter, blog, notes) here. Hope you will bear with me.
         </p>
       </div>
       <!--/CONTENT-->
