--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!-- MAIN
     ================================================== -->
     <main class="main">
-      <div class="content">
+      <!-- <div class="content">
         <p>
           Hey, I'm Sarwar and thanks for visiting. I'll do some projects (newsletter, blog, notes) here. Hope you will stay with me.
         </p>
-      </div>
+      </div> -->
       <!--/CONTENT-->
 
       <div class="socials">
